# yolo_annotator

./: .gitignore  README.md  annotatorjs.md  dataset_verification.ipynb  document.md  main.py  mainjs.md  pyproject.toml  test_image.html  viewspy.md
base_images/: README.txt
documents/: annotatorjs.md  document.md  mainjs.md  navigation_feature.md  viewspy.md
output/labels/valid/: IMG_0643.txt
yolo_annotator/: create_superuser.py  manage.py
yolo_annotator/annotator/: admin.py  models.py  urls.py  views.py
yolo_annotator/annotator/management/commands/: change_admin_email.py  init_labels.py
yolo_annotator/annotator/migrations/: 0001_initial.py
yolo_annotator/annotator/static/css/: style.css
yolo_annotator/annotator/static/js/: annotator.js  main.js
yolo_annotator/annotator/templates/annotator/: annotate.html  index.html
yolo_annotator/yolo_annotator/: asgi.py  settings.py  urls.py  wsgi.py
